stealth (2.01.00)

  * Stealthcleanup now has a -v flag, showing its actions

  * Following an upgrade to bobcat 2.11.00 stealth should be recompiled

  * Identifiers in #defines in configuration files may now also contain 
    hyphens and underscores.

  * The message about 'can't read Mstream...' when stealth started with
    --keep-alive is now prevented

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 05 Feb 2011 12:38:23 +0100

stealth (2.00.1)

  * Documentation requires >= Yodl 3.00.0

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 10 Nov 2010 10:38:49 +0100

stealth (2.00.0)

  * Changed Errno::what() call to Errno::why()
  * Repaired handling of the -o flag (wasn't working: checked for option "o"
    rather than 'o'.
  * Implemented option -s (--skip-files) to skip the integrity-test of
    specified files. When appearing in the logs so far the initial appearance
    of a path in the file containing the files to skip results in a
    log-message "SKIPPING"
  * A full overhaul of Stealth's sources warrants an upgrade of the major
    version to 2.
  * replacing Msg by Mstream and Errno facilities
  * NOTE: requires bobcat 2.09.00 or later

stealth (1.47.4)

  * Added g++ option --std=c++0x to match the latest Bobcat library
  * Stealth is now by default installed in /usr/bin (instead of /usr/sbin) as
    non-root users are also able to use stealth, e.g., to monitor the
    integrity of their own files. Stealth support scripts (stealthcleanup,
    stealthcron, stealthmail) are found by default in in
    /usr/share/doc/stealth/scripts/usr/bin and you might want to install them
    in /usr/bin rather than /usr/sbin, as suggested previously.

    **MAKE SURE** that `/sbin/' is changed to `/bin/' in any scripts you may
    use to activate stealth (e.g. /etc/cron.d/stealth, calling stealthcron)

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 03 Sep 2009 13:52:38 +0200

stealth (1.47.3)

  * Build script's `manual-tmp' removed, reactivated `manual'. Build now